--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@enmareynoso/screen-handler",
+  "name": "screen-handler-arch",
   "version": "1.0.0",
   "description": "npm package ",
   "main": "main.js",
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/enmareynoso/Screen-Handler-Npm#readme",
   "dependencies": {
     "colors": "^1.4.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "readline": "^0.10.3"
   }
 }
